--- a/nginx.conf
+++ b/nginx.conf
@@ -48,10 +48,10 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue.vinnimakeovers.online:8080/; }
-        location /api/user/ { proxy_pass http://user.daws84s.site:8080/; }
-        location /api/cart/ { proxy_pass http://cart.daws84s.site:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping.daws84s.site:8080/; }
-        location /api/payment/ { proxy_pass http://payment.daws84s.site:8080/; }
+        location /api/user/ { proxy_pass http://localhost:8080/; }
+        location /api/cart/ { proxy_pass http://localhost:8080/; }
+        location /api/shipping/ { proxy_pass http://localhost:8080/; }
+        location /api/payment/ { proxy_pass http://localhost:8080/; }
 
         location /health {
           stub_status on;
